syntax = "proto3";

package board;

import "google/protobuf/empty.proto";

option go_package = "github.com/ghilbut/finpc/grpc";

service Board {
  rpc PostSubject (NewSubject) returns (Subject);
  rpc DeleteSubject (SubjectId) returns (google.protobuf.Empty);
  rpc ListSubject (google.protobuf.Empty) returns (SubjectList);

  rpc PostQuestion (NewQuestion) returns (Question);
  rpc DeleteQuestion (QuestionId) returns (google.protobuf.Empty);
  rpc ListQuestion (SubjectId) returns (QuestionList);
  rpc GetQuestion (QuestionId) returns (Question);

  rpc PostLikes (Likes) returns (google.protobuf.Empty);
  rpc DeleteLikes (Likes) returns (google.protobuf.Empty);
}

message Likes {
  string user_id = 1;
  int64 question_id = 2;
}

message NewSubject {
  string title = 1;
}

message Subject {
  int64 id = 1;
  string title = 2;
}

message SubjectId {
  int64 id = 1;
}

message NewQuestion {
  string question = 1;
  int64 subject_id = 2;
}

message Question {
  int64 id = 1;
  string question = 2;
  int64 likes_count = 3;
}

message QuestionList {
  repeated Question question_list = 1;
}

message SubjectList {
  repeated Subject subject_list = 1;
}

message QuestionId {
  int64 id = 1;
}